# juara-camera-trap-deployment

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: local.mock.toml  station.example.toml  station.june2026trap.example.toml  station.pi1.example.toml  station.pi4.example.toml  station.pi5.example.toml
docs/: current_camera_trap.md  model_choices.md  pi_setup.md
scripts/: benchmark_birdnet_chunking.sh  build_bird_playback_library.py  copy_pi4_prestage_to_sd.sh  deploy_to_pi.sh  deploy_to_pi1.sh  deploy_to_pi4.sh  deploy_to_pi5.sh  install_june2026trap.sh  install_pi.sh  juara_gdrive_auth_helper  juara_gdrive_sync  juara_git_update  juara_health_report  juara_motion_test  juara_motion_watch.py  juara_networkpi_maintenance  juara_scd41_check  juara_uart_co2_check  juara_wifi_reconnect  mac_usb_http_proxy.py  patch_sd_usb_gadget_cdc.sh  patch_sd_usb_gadget_hx711_method.sh  patch_sd_usb_gadget_static.sh  pi4_bootstrap_from_boot.sh  pi4_finish_setup.sh  pi_birdnet_matrix.py  pi_birdnet_probe.py  pi_check_species_filter.py  pi_lux_check.py  pi_preflight.sh  pi_speciesnet_check.py
systemd/: juara-ai-worker.service.in  juara-daily-reboot.service  juara-daily-reboot.timer  juara-git-update.service  juara-git-update.timer  juara-health-report.service  juara-health-report.timer  juara-networkpi-maintenance.service  juara-networkpi-maintenance.timer  juara-station.service.in  juara-wifi-reconnect.service  juara-wifi-reconnect.timer
tests/: test_acoustic_indices.py  test_ai.py  test_camera.py  test_metrics.py  test_sensors.py  test_service_mock.py  (+4 more)
(+2263 files in other folders)
