[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juara-wildlife-station"
version = "0.1.0"
description = "Autonomous Raspberry Pi wildlife monitoring station for camera, audio, GPS/RTC, and environmental sensors."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
pi = [
  "adafruit-blinka",
  "adafruit-circuitpython-bme280",
  "adafruit-circuitpython-bme680",
  "adafruit-circuitpython-scd4x",
  "adafruit-circuitpython-veml7700",
  "gpiozero",
  "pigpio",
  "pms5003",
]
birdnet = [
  "birdnet-analyzer==2.4.0",
]
speciesnet = [
  "torch==2.8.0; platform_machine == 'aarch64'",
  "torchvision==0.23.0; platform_machine == 'aarch64'",
  "speciesnet==5.0.3",
]
ai = [
  "birdnet-analyzer==2.4.0",
  "torch==2.8.0; platform_machine == 'aarch64'",
  "torchvision==0.23.0; platform_machine == 'aarch64'",
  "speciesnet==5.0.3",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
juara-station = "juara_station.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
